# maxio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api.md  changelog.md  chats.md  di.md  filters.md  fsm.md  handlers.md  index.md  keyboards.md  media.md  middleware.md  quickstart.md  routers.md
examples/: chat_tools_bot.py  echo_bot.py  fsm_bot.py  guess_number_bot.py  media_upload_bot.py  middleware_bot.py  routers_bot.py  showcase.py  webhooks_bot.py
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
site/changelog/: index.html
site/di/: index.html
site/filters/: index.html
site/fsm/: index.html
site/handlers/: index.html
site/keyboards/: index.html
site/media/: index.html
site/middleware/: index.html
site/quickstart/: index.html
site/routers/: index.html
site/search/: search_index.json
src/maxio/: __init__.py  _docs.py  _logging.py  _runtime.py  app.py  bot.py  enums.py  exceptions.py  filters.py  injection.py  keyboards.py  magic.py  media.py  middleware.py  router.py
src/maxio/fsm/: __init__.py  context.py  filter.py  states.py  storage.py
src/maxio/methods/: __init__.py  _helpers.py  base.py  bots.py  callbacks.py  chats.py  media.py  messages.py  subscriptions.py  updates.py
src/maxio/types/: __init__.py  attachment.py  callback.py  chat.py  member.py  message.py  subscription.py  update.py  user.py  video.py
tests/: conftest.py  test_client.py  test_dispatch.py  test_fsm.py  test_magic.py  test_media.py  test_middleware.py
